--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
