--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.21.0",
+    "@emotion/react": "^11.11.4",
     "@ant-design/icons": "^5.4.0",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@types/validator": "^13.12.0",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "clsx": "^2.1.0",
-    "dotenv": "^16.4.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "final-form": "^4.20.10",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-final-form": "^6.5.9",
     "react-hook-form": "^7.52.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.2.2",
-    "vite-project": "file:",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
